Admin and aut
Delete UserDetails as it was redundant
Refactor a few things
Add roles of users
Primitive draft of admin controller