@@ -5,6 +5,7 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.example.projectbackend.service.JwtService;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -14,6 +15,7 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtAuthFilter extends OncePerRequestFilter {
@@ -45,18 +47,15 @@ public class JwtAuthFilter extends OncePerRequestFilter {
         // 4. Validate the token and extract username
         if (jwtService.isTokenValid(token) && SecurityContextHolder.getContext().getAuthentication() == null) {
             String username = jwtService.extractUsername(token);
+            String role = jwtService.extractRole(token);
 
-            UserDetails userDetails = User.builder()
-                    .username(username)
-                    .password("")
-                    .authorities(Collections.emptyList())
-                    .build();
+
             // 5. Create Authentication object
             UsernamePasswordAuthenticationToken authentication =
                     new UsernamePasswordAuthenticationToken(
-                            userDetails,
+                            username,
                             null,
-                            Collections.emptyList() // no roles for now
+                            List.of(new SimpleGrantedAuthority("ROLE_"+role))
                     );
 
             authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
